# final-project-gradsync

./: .gitignore  README.md  ROADMAP.md  cluster.json  cluster_something.json  colab_train.py  compile_proto.sh  main.py  main_neat.py  my_changes.patch  pyproject.toml  simple_vit.py  simple_vit_no_dist.py  test_train.py
