[project]
name = "gradsync"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = [
    "packages/common",
    "packages/comms",
    "packages/optimizer",
    "packages/pipeline",
    "packages/telemetry",
    "packages/compression-lab",
    "packages/orchestrator",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-timeout>=2.4.0",
]
